Added: GetHoursWorked, implemented in constructor

--- a/App.config
+++ b/App.config
@@ -8,7 +8,7 @@
     <userSettings>
         <HourLogger.Properties.Settings>
             <setting name="OutputFile" serializeAs="String">
-                <value />
+                <value>output.txt</value>
             </setting>
         </HourLogger.Properties.Settings>
     </userSettings>
